cleaned code and nice formatting